--- a/ultrashare/pom.xml
+++ b/ultrashare/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>ultrashare</finalName>
