--- a/ultrashare/src/main/resources/log4j.properties
+++ b/ultrashare/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=stdout,debug
+log4j.rootLogger=debug,stdout
 #log4j.com.ultrashare=debug
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
