--- a/ultrashare/src/main/resources/log4j.properties
+++ b/ultrashare/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
-log4j.rootLogger=debug,stdout
+log4j.rootLogger=error,stdout
+log4j.category.com.ultrashare=trace
 #log4j.com.ultrashare=debug
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%t %-5p %c{2} - %m%n 
+log4j.appender.stdout.layout.ConversionPattern=[%d{dd/MM/yyyy HH:mm:ss,SSS}]-[%-5p]-[%t] %% (%C{1}) - %m%n 
