Mail account change

--- a/ultrashare/src/main/resources/email.properties
+++ b/ultrashare/src/main/resources/email.properties
@@ -4,7 +4,7 @@ mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.auth=true
 mail.smtp.port=2525
 
-mail.credential.username=danilo.valvezon@valvezon.com
+mail.credential.username=no-reply.ultrashare@valvezon.com
 mail.credential.password=password...
 
 mail.config.debug=false
