--- a/ultrashare/src/main/resources/ftp.properties
+++ b/ultrashare/src/main/resources/ftp.properties
@@ -1,4 +1,6 @@
 ftp.config.host=ftp.valvezon.com
 
-ftp.credential.username=valvezon@valvezon.com
-ftp.credential.password=password......
+#ftp.credential.username=valvezon@valvezon.com
+#ftp.credential.password=password......
+ftp.credential.username=homolog@valvezon.com
+ftp.credential.password=homolog
